--- a/test/e2e/index.html
+++ b/test/e2e/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Angular Fontselect Sandbox</title>
+  <link rel="stylesheet/less" type="text/css" href="/src/less/fontselect.less" />
 </head>
 <body>
   <!--    THIS IS NOT A SANDBOX, IT'S FOR E2E TESTING!    -->
@@ -10,6 +11,7 @@
   <fontselect />
   <script src="/bower_components/jquery/jquery.js"></script>
   <script src="/bower_components/angular/angular.js"></script>
+  <script src="/bower_components/less/dist/less-1.6.1.js"></script>
   <script src="/src/js/defaults.js"></script>
   <script src="/src/js/helpers.js"></script>
   <script src="/src/js/module.js"></script>
