--- a/test/e2e/index.html
+++ b/test/e2e/index.html
@@ -8,7 +8,7 @@
 <body>
   <!--    THIS IS NOT A SANDBOX, IT'S FOR E2E TESTING!    -->
   <!-- PLEASE USE index.html IF YOU'D LIKE TO PLAY AROUND -->
-  <fontselect />
+  <jd-fontselect />
   <script src="/bower_components/jquery/jquery.js"></script>
   <script src="/bower_components/angular/angular.js"></script>
   <script src="/bower_components/less/dist/less-1.6.1.js"></script>
@@ -19,6 +19,6 @@
   <script src="/src/js/fontselect.controller.js"></script>
   <script src="/src/js/fontselect.directive.js"></script>
   <script src="/src/partials/all.js"></script>
-  <script type="text/javascript">angular.bootstrap('body', ['fontselect.module']);</script>
+  <script type="text/javascript">angular.bootstrap('body', ['jdFontselect']);</script>
 </body>
 </html>
