--- a/test/e2e/index.html
+++ b/test/e2e/index.html
@@ -5,20 +5,24 @@
   <title>Angular Fontselect Sandbox</title>
   <link rel="stylesheet/less" type="text/css" href="/src/less/fontselect.less" />
 </head>
-<body>
+<body ng-app="jdFontselectTest">
   <!--    THIS IS NOT A SANDBOX, IT'S FOR E2E TESTING!    -->
   <!-- PLEASE USE index.html IF YOU'D LIKE TO PLAY AROUND -->
   <jd-fontselect />
   <script src="/bower_components/jquery/jquery.js"></script>
   <script src="/bower_components/angular/angular.js"></script>
   <script src="/bower_components/less/dist/less-1.6.1.js"></script>
+  <script src="/src/js/module.js"></script>
   <script src="/src/js/defaults.js"></script>
   <script src="/src/js/helpers.js"></script>
-  <script src="/src/js/module.js"></script>
+  <script src="/src/js/startFrom.filter.js"></script>
   <script src="/src/js/fonts.service.js"></script>
   <script src="/src/js/fontselect.controller.js"></script>
   <script src="/src/js/fontselect.directive.js"></script>
+  <script src="/src/js/fontlist.directive.js"></script>
   <script src="/src/partials/all.js"></script>
-  <script type="text/javascript">angular.bootstrap('body', ['jdFontselect']);</script>
+  <script type="text/javascript">
+angular.module('jdFontselectTest', ['jdFontselect']);
+</script>
 </body>
 </html>
