implement api key usage.

--- a/test/e2e/index.html
+++ b/test/e2e/index.html
@@ -13,6 +13,7 @@
   <script src="/bower_components/angular/angular.js"></script>
   <script src="/bower_components/less/dist/less-1.6.1.js"></script>
   <script src="/src/js/module.js"></script>
+  <script src="/tmp.apikeys.js"></script>
   <script src="/src/js/defaults.js"></script>
   <script src="/src/js/helpers.js"></script>
   <script src="/src/js/startFrom.filter.js"></script>
