--- a/test/e2e/index.html
+++ b/test/e2e/index.html
@@ -6,8 +6,8 @@
   <link rel="stylesheet/less" type="text/css" href="/src/less/fontselect.less" />
 </head>
 <body ng-app="jdFontselectTest">
-  <!--    THIS IS NOT A SANDBOX, IT'S FOR E2E TESTING!    -->
-  <!-- PLEASE USE index.html IF YOU'D LIKE TO PLAY AROUND -->
+  <!--       THIS IS NOT A SANDBOX, IT'S FOR E2E TESTING!      -->
+  <!-- PLEASE USE demo/index.html IF YOU'D LIKE TO PLAY AROUND -->
   <jd-fontselect />
   <script src="/bower_components/jquery/jquery.js"></script>
   <script src="/bower_components/angular/angular.js"></script>
