Add fuzzy search. Props to Tim Sebastian

--- a/test/e2e/index.html
+++ b/test/e2e/index.html
@@ -17,6 +17,7 @@
   <script src="/src/js/defaults.js"></script>
   <script src="/src/js/helpers.js"></script>
   <script src="/src/js/startFrom.filter.js"></script>
+  <script src="/src/js/fuzzy.filter.js"></script>
   <script src="/src/js/fonts.service.js"></script>
   <script src="/src/js/fontselect.controller.js"></script>
   <script src="/src/js/fontselect.directive.js"></script>
