Previews for all the google fontzzz.

--- a/demo/index.html
+++ b/demo/index.html
@@ -10,12 +10,14 @@
   <my-app>
   </my-app>
 
+  <script src="/bower_components/yepnope/yepnope.js"></script>
   <script src="/bower_components/jquery/jquery.js"></script>
   <script src="/bower_components/angular/angular.js"></script>
   <script src="/bower_components/less/dist/less-1.6.1.js"></script>
   <script src="/src/js/module.js"></script>
   <script src="/tmp.apikeys.js"></script>
   <script src="/src/js/defaults.js"></script>
+  <script src="/src/js/googleFontCategories.js"></script>
   <script src="/src/js/helpers.js"></script>
   <script src="/src/js/startFrom.filter.js"></script>
   <script src="/src/js/fuzzy.filter.js"></script>
@@ -23,6 +25,7 @@
   <script src="/src/js/fontselect.controller.js"></script>
   <script src="/src/js/fontselect.directive.js"></script>
   <script src="/src/js/fontlist.directive.js"></script>
+  <script src="/src/js/font.directive.js"></script>
   <script src="/src/partials/all.js"></script>
   <script type="text/javascript">
 angular.module('myApp', ['jdFontselect']).directive('myApp', function() {
