--- a/demo/index.html
+++ b/demo/index.html
@@ -3,17 +3,26 @@
 <head>
   <meta charset="utf-8">
   <title>Angular Fontselect Sandbox</title>
+  <style>
+    [ng-cloak] {
+      display: none;
+    }
+  </style>
   <link rel="stylesheet/less" type="text/css" href="styles.less" />
   <link rel="stylesheet/less" type="text/css" href="/src/less/fontselect.less" />
 </head>
-<body>
+<body ng-cloak>
     <div class="wrap">
       <div class="fontselect">
-        <my-app>
-        </my-app>
+        <h1 style="font-family: {{first.stack}};">Angular Fontselection, by Jimdo</h1>
+        <jd-fontselect selected="first"></jd-fontselect>
+        <p>Lorem Ipsum</p>
+
+        <h1 style="font-family: {{second.stack}};">Foob</h1>
+        <jd-fontselect selected="second"></jd-fontselect>
+        <p>ASDFG</p>
+
       </div>
-
-
     </div>
 
 
