everybody flex now

--- a/demo/index.html
+++ b/demo/index.html
@@ -28,9 +28,9 @@
       </div>
       <div class="contentwrap relacon">
 
-        <div class="fontselect">
+<!--         <div class="fontselect">
           <jd-fontselect selected="content"></jd-fontselect>
-        </div>
+        </div> -->
         
         <section class="content mw" style="font-family: {{content.stack}};">
 
@@ -47,9 +47,10 @@
     </div>
       <div class="footerwrap relacon">
 
-        <div class="fontselect">
+<!--         <div class="fontselect">
           <jd-fontselect selected="footer"></jd-fontselect>
         </div>
+         -->
         <footer class='mw' style="font-family: {{footer.stack}};">
           <a href="">github repo</a>
           <a href="">Jimdo</a>
