Add current href directive.

--- a/demo/index.html
+++ b/demo/index.html
@@ -8,6 +8,7 @@
       display: none;
     }
   </style>
+  <link rel="stylesheet" type="text/css" jd-fontselect-current-href />
   <link rel="stylesheet/less" type="text/css" href="styles.less" />
   <link rel="stylesheet/less" type="text/css" href="/src/less/fontselect.less" />
 </head>
