no jumping when sleecting fonts

--- a/demo/index.html
+++ b/demo/index.html
@@ -23,7 +23,7 @@
         <header style="font-family: {{header.stack}};">
 
           <h1>Angular Fontselection, by Jimdo</h1>
-          <h2>a Directive written to bring a new expierience to font family choosing
+          <h2>a Directive written to bring a new experience to font family choosing
           </h2>
         </header>
       </div>
