Fix travis and use real partials for demo and protractor.

--- a/demo/index.html
+++ b/demo/index.html
@@ -8,9 +8,10 @@
       display: none;
     }
   </style>
+  <base href="/" />
   <link rel="stylesheet" type="text/css" jd-fontselect-current-href />
-  <link rel="stylesheet/less" type="text/css" href="styles.less" />
-  <link rel="stylesheet/less" type="text/css" href="/src/less/fontselect.less" />
+  <link rel="stylesheet/less" type="text/css" href="demo/styles.less" />
+  <link rel="stylesheet/less" type="text/css" href="src/less/fontselect.less" />
 </head>
 <body ng-cloak>
     <div class="wrap">
