--- a/test/e2e/index.html
+++ b/test/e2e/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="utf-8">
   <title>Angular Fontselect Sandbox</title>
-  <link rel="stylesheet/less" type="text/css" href="/src/less/fontselect.less" />
+  <base href="/">
+  <link rel="stylesheet/less" type="text/css" href="src/less/fontselect.less" />
 </head>
 <body>
   <!--       THIS IS NOT A SANDBOX, IT'S FOR E2E TESTING!      -->
