Use directive for default demo fonts.

--- a/demo/index.html
+++ b/demo/index.html
@@ -18,10 +18,10 @@
       <div class="headwrap relacon">
 
         <div class="fontselect">
-          <jd-fontselect selected="header"></jd-fontselect>
+          <jd-fontselect stack="header"></jd-fontselect>
         </div>
 
-        <header style="font-family: {{header.stack}};">
+        <header style="font-family: {{header}};">
 
           <h1>Angular Fontselection, by Jimdo</h1>
           <h2>a Directive written to bring a new experience to font family choosing
@@ -31,10 +31,10 @@
       <div class="contentwrap relacon">
 
         <div class="fontselect">
-          <jd-fontselect selected="content"></j d-fontselect>
+          <jd-fontselect stack="content"></jd-fontselect>
         </div>
 
-        <section class="content mw" style="font-family: {{content.stack}};">
+        <section class="content mw" style="font-family: {{content}};">
 
 
           <p>Just implement to your angular App and make choosing a Font family easy. Actually in this State I really don"t know what I should write on this page but we need some text to show what you"re able to do with the interface
@@ -50,10 +50,10 @@
       <div class="footerwrap relacon">
 
         <div class="fontselect">
-          <jd-fontselect selected="footer"></jd-fontselect>
+          <jd-fontselect stack="footer"></jd-fontselect>
         </div>
         
-        <footer class='mw' style="font-family: {{footer.stack}};">
+        <footer class='mw' style="font-family: {{footer}};">
           <a href="https://github.com/Jimdo/angular-fontselect">github repo</a>
           <a href="http://jimdo.com">Jimdo</a>
           
