revamped the demo page and fixed a little snippet for the fontselection

--- a/demo/index.html
+++ b/demo/index.html
@@ -15,50 +15,30 @@
 </head>
 <body ng-cloak>
     <div class="wrap">
-      <div class="headwrap relacon">
-
-        <div class="fontselect">
-          <jd-fontselect stack="header"></jd-fontselect>
+        <div class="topbar">
+            <jd-fontselect stack="font"></jd-fontselect>
         </div>
 
-        <header style="font-family: {{header}};">
-
-          <h1>Angular Fontselection, by Jimdo</h1>
+        <header >
+          <h1>Angular Fontselection</h1>
           <h2>a Directive written to bring a new experience to font family choosing
+          <h3>(in developement)</h3>
           </h2>
         </header>
-      </div>
-      <div class="contentwrap relacon">
 
-        <div class="fontselect">
-          <jd-fontselect stack="content"></jd-fontselect>
+        <div class="selection-example">
+          <div class="fontselect">
+          </div>
+          <span style="font-family: {{font}};">Change the Font family of this text with our awesome Fontselection</span>
         </div>
 
-        <section class="content mw" style="font-family: {{content}};">
 
-
-          <p>Just implement to your angular App and make choosing a Font family easy. Actually in this State I really don"t know what I should write on this page but we need some text to show what you"re able to do with the interface
-          </p>
-          <br>
-          <p>Just implement to your angular App and make choosing a Font family easy. Actually in this State I really don"t know what I should write on this page but we need some text to show what you"re able to do with the interface
-          </p>
-
-        </section>
-
-
-    </div>
-      <div class="footerwrap relacon">
-
-        <div class="fontselect">
-          <jd-fontselect stack="footer"></jd-fontselect>
-        </div>
-        
-        <footer class='mw' style="font-family: {{footer}};">
-          <a href="https://github.com/Jimdo/angular-fontselect">github repo</a>
+        <div class="links">
+          <a href="https://github.com/Jimdo/angular-fontselect">github</a>
           <a href="http://jimdo.com">Jimdo</a>
-          
-        </footer>
-      </div>
+        </div>
+
+
   </div>
 
     <script src="/bower_components/jquery/jquery.js"></script>
