feat(curatedFontsProvider): provide actual font objects
ref #49

--- a/demo/index.html
+++ b/demo/index.html
@@ -64,6 +64,7 @@
   <script src="/src/js/filter.has-all-subsets.js"></script>
   <script src="/src/js/filter.stack-search.js"></script>
   <script src="/src/js/filter.start-from.js"></script>
+  <script src="/src/js/provider.curatedFonts.js"></script>
   <script src="/src/js/service.fonts.js"></script>
   <script src="/ng_templates.js"></script>
   <!-- endinjector -->
