--- a/demo/index.html
+++ b/demo/index.html
@@ -56,6 +56,7 @@
   <script src="/src/js/helper.functions.js"></script>
   <script src="/src/js/directive.current-href.js"></script>
   <script src="/src/js/directive.font.js"></script>
+  <script src="/src/js/directive.fontlist-entry.js"></script>
   <script src="/src/js/directive.fontlist.js"></script>
   <script src="/src/js/directive.fontselect.js"></script>
   <script src="/src/js/directive.meta.js"></script>
