refactor: use ng-if on jdfs-window
in order to initiate sub-directives only when window is shown
we can auto-load font preview whenever a jd-font directive is loaded
without the need to check if the window is shown or not

BREAKING CHANGE
 - jdFont directive will load on construction regardless if active or not

--- a/test/e2e/env/index.html
+++ b/test/e2e/env/index.html
@@ -41,6 +41,7 @@
   <script src="/instrumented/src/js/helper.functions.js"></script>
   <script src="/instrumented/src/js/directive.current-href.js"></script>
   <script src="/instrumented/src/js/directive.font.js"></script>
+  <script src="/instrumented/src/js/directive.fontlist-entry.js"></script>
   <script src="/instrumented/src/js/directive.fontlist.js"></script>
   <script src="/instrumented/src/js/directive.fontselect.js"></script>
   <script src="/instrumented/src/js/directive.meta.js"></script>
@@ -49,6 +50,7 @@
   <script src="/instrumented/src/js/filter.has-all-subsets.js"></script>
   <script src="/instrumented/src/js/filter.stack-search.js"></script>
   <script src="/instrumented/src/js/filter.start-from.js"></script>
+  <script src="/instrumented/src/js/provider.curatedFonts.js"></script>
   <script src="/instrumented/src/js/service.fonts.js"></script>
   <script src="/ng_templates.js"></script>
   <!-- endinjector -->
