--- a/demo/index.html
+++ b/demo/index.html
@@ -28,7 +28,7 @@
     <header >
       <h1>Angular Fontselection</h1>
       <h2>a Directive written to bring a new experience to font family choosing
-      <h3>(in developement)</h3>
+      <h3>(in development)</h3>
       </h2>
     </header>
 
