--- a/demo/index.html
+++ b/demo/index.html
@@ -46,6 +46,7 @@
 
   <!-- bower:js -->
   <script src="../bower_components/angular/angular.js"></script>
+  <script src="../bower_components/weakmap-polyfill/weakmap-polyfill.js"></script>
   <!-- endbower -->
   <script src="/tmp.apikeys.js"></script>
   <script src="/dist/libs/webfontloader.js"></script>
