fix(fontlist): exclude non-font-entries on keyboard navigation

--- a/test/e2e/env/index.html
+++ b/test/e2e/env/index.html
@@ -31,6 +31,7 @@
   <span id="events" class="ng-cloak">{{events()}}</span>
   <!-- bower:js -->
   <script src="../../../bower_components/angular/angular.js"></script>
+  <script src="../../../bower_components/weakmap-polyfill/weakmap-polyfill.js"></script>
   <!-- endbower -->
   <script src="/tmp.apikeys.js"></script>
   <script src="/dist/libs/webfontloader.js"></script>
